--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">MP_FinalProject</string>
+    <string name="app_name">Rover Realm</string>
+    <string name="title_activity_post_details">Post Details</string>
+    <string name="title_activity_login">Login</string>
 </resources>
