LoginActivity and RegisterActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Rover Realm</string>
     <string name="title_activity_post_details">Post Details</string>
     <string name="title_activity_login">Login</string>
+    <string name="default_web_client_id">69688948524-uv6dgef15k6mhpu4lg9k1l39430756nl.apps.googleusercontent.com</string>
 </resources>
